--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -17,7 +17,8 @@
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+      <div class="blank"></div>
+      <button class="notifications" type="button">
         1 new notification
       </button>
       <div class="profile-image"></div>
